grpc-envoy-loadbalancer/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/helloworld.Greeter/"
                  grpc: {}
                route:
                  cluster: grpc_backend
              - match:
                  prefix: "/postgres.PostgresService/"
                  grpc: {}
                route:
                  cluster: grpc_backend
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: grpc_backend
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    load_assignment:
      cluster_name: grpc_backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: "host.docker.internal"
                port_value: 50051
